@@ -10,7 +10,6 @@ package org.opendaylight.infrautils.ready.karaf.internal;
 import com.google.errorprone.annotations.Var;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.opendaylight.odlparent.bundles.diag.ContainerState;
@@ -35,7 +34,6 @@ final class BundleDiagInfosImpl implements BundleDiagInfos {
     private final List<String> nokBundleStateInfoTexts;
     private final List<String> whitelistedBundleStateInfoTexts;
     private final Map<ContainerState, Integer> bundleStatesCounters;
-    private final Map<BundleSymbolicNameWithVersion, ContainerState> bundlesStateMap;
 
     /**
      * Create an instance. The collections provided as arguments will be kept as-is; it’s up to the caller
@@ -45,23 +43,19 @@ final class BundleDiagInfosImpl implements BundleDiagInfos {
      * @param nokBundleStateInfoTexts information about bundles not in OK state.
      * @param whitelistedBundleStateInfoTexts information about whitelisted bundles.
      * @param bundleStatesCounters bundle state counters.
-     * @param bundlesStateMap bundle state map (state of each bundle).
      */
     private BundleDiagInfosImpl(List<String> okBundleStateInfoTexts, List<String> nokBundleStateInfoTexts,
-            List<String> whitelistedBundleStateInfoTexts, Map<ContainerState, Integer> bundleStatesCounters,
-            Map<BundleSymbolicNameWithVersion, ContainerState> bundlesStateMap) {
+            List<String> whitelistedBundleStateInfoTexts, Map<ContainerState, Integer> bundleStatesCounters) {
         this.okBundleStateInfoTexts = okBundleStateInfoTexts;
         this.nokBundleStateInfoTexts = nokBundleStateInfoTexts;
         this.whitelistedBundleStateInfoTexts = whitelistedBundleStateInfoTexts;
         this.bundleStatesCounters = bundleStatesCounters;
-        this.bundlesStateMap = bundlesStateMap;
     }
 
     static BundleDiagInfosImpl ofDiag(Diag diag) {
         var okBundleStateInfoTexts = new ArrayList<String>();
         var nokBundleStateInfoTexts = new ArrayList<String>();
         var whitelistedBundleStateInfoTexts = new ArrayList<String>();
-        var bundlesStateMap = new HashMap<BundleSymbolicNameWithVersion, ContainerState>();
 
         for (var bundle : diag.bundles()) {
             var bundleSymbolicName = bundle.symbolicName();
@@ -70,7 +64,6 @@ final class BundleDiagInfosImpl implements BundleDiagInfos {
             var serviceState = bundle.serviceState();
             var diagText = serviceState.diag();
             var karafBundleState = serviceState.containerState();
-            bundlesStateMap.put(bundleSymbolicNameWithVersion, serviceState.containerState());
 
             var bundleStateDiagText = "OSGi state = " + bundle.frameworkState().symbolicName()
                 + ", Karaf bundleState = " + karafBundleState.name()
@@ -95,8 +88,8 @@ final class BundleDiagInfosImpl implements BundleDiagInfos {
         }
 
         return new BundleDiagInfosImpl(List.copyOf(okBundleStateInfoTexts), List.copyOf(nokBundleStateInfoTexts),
-            List.copyOf(whitelistedBundleStateInfoTexts), Collections.unmodifiableMap(diag.containerStateFrequencies()),
-            Map.copyOf(bundlesStateMap));
+            List.copyOf(whitelistedBundleStateInfoTexts),
+            Collections.unmodifiableMap(diag.containerStateFrequencies()));
     }
 
     @Override
@@ -133,11 +126,6 @@ final class BundleDiagInfosImpl implements BundleDiagInfos {
     @Override
     public String getSummaryText() {
         return "diag: " + getSystemState() + " " + bundleStatesCounters.toString();
-    }
-
-    @Override
-    public Map<BundleSymbolicNameWithVersion, ContainerState> getBundlesStateMap() {
-        return bundlesStateMap;
     }
 
     @Override
